codebase/SFDC deploy Components/src/objects/ClaimMaster__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Completion_Date__c</fullName>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AssignedDate__c</fullName>
        <label>Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assignment_Status__c</fullName>
        <label>Assignment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ExecutiveMaster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ExecutiveMaster</label>
        <referenceTo>ExecutiveMaster__c</referenceTo>
        <relationshipLabel>ClaimMaster</relationshipLabel>
        <relationshipName>ClaimMaster</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Executive_Comment__c</fullName>
        <label>Executive Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Completion_Date__c</fullName>
        <label>Expected Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Image_ID__c</fullName>
        <label>Image ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IF( Image_ID__c != null ,    IMAGE( &apos;/sfc/servlet.shepherd/version/download/&apos; &amp; Image_ID__c, &apos;&apos;) ,    IMAGE(&apos;&apos; , &apos;&apos; , 0 , 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Date__c</fullName>
        <label>Incident Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incident_Location__c</fullName>
        <label>Incident Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsuranceMaster__c</fullName>
        <label>InsuranceMaster</label>
        <referenceTo>InsuranceMaster__c</referenceTo>
        <relationshipLabel>ClaimMaster</relationshipLabel>
        <relationshipName>ClaimMaster</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>ClaimMaster</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CM-{0000000}</displayFormat>
        <label>ClaimMaster ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClaimMaster</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>